--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
     "@gorhom/bottom-sheet": "^4.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "card-detector-js": "^1.0.0",
     "expo": "~46.0.3",
     "expo-linear-gradient": "^11.4.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-mask-text": "^0.10.0",
+    "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^5.0.0-rc.4",
     "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
+    "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^12.4.4",
+    "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
     "tailwindcss-react-native": "^1.7.10"
