--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "expo-linear-gradient": "^11.4.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.4",
+    "react-native": "0.69.5",
+    "react-native-floating-label-input": "^1.4.2",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-mask-text": "^0.10.0",
     "react-native-masked-text": "^1.13.0",
